gbiblio-ubiquity (0.9guada3gbiblio6) stable; urgency=low

  * Fixing some issues with divert

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Wed, 29 Oct 2008 12:12:25 +0200

gbiblio-ubiquity (0.9guada3gbiblio5) stable; urgency=low

  * Fixed path for the /cdrom and /proc checking. We must check the ones from /target
  * Deleted restricted component from sources.list uri because we have no packages from there and crash looking for restricted's Packages.gz
  * Hidden some steps (Welcome and userinfo)
  * Added some preseed (userinfo)
  * No create user. Those will be created by profiles packages

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Mon, 27 Oct 2008 18:35:25 +0200

gbiblio-ubiquity (0.9guada3gbiblio4) stable; urgency=low

  * Added source.list line for the CDROM. Other way. And other

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Fri, 17 Oct 2008 14:56:25 +0200

gbiblio-ubiquity (0.9guada3gbiblio3) stable; urgency=low

  * Added source.list line for the CDROM. Other way.

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Fri, 17 Oct 2008 14:37:25 +0200

gbiblio-ubiquity (0.9guada3gbiblio2) stable; urgency=low

  * Added source.list line for the CDROM.

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Thu, 16 Oct 2008 14:07:25 +0200

gbiblio-ubiquity (0.9guada3gbiblio1) stable; urgency=low

  * Imported from guada-ubiquity.
  * Renamed the package and the references on all files
  * Made some improvements on autotools and debian packaging stuff

 -- Juanje Ojeda Croissier <jojeda@emergya.es>  Wed, 15 Oct 2008 00:29:25 +0200

guada-ubiquity (0.9-1guada3) hardy; urgency=low

  * Fixed some splitted strings.

 -- Alfredo Matas <amatas@emergya.es>  Mon, 15 Sep 2008 11:48:25 +0200

guada-ubiquity (0.9-1guada2) hardy; urgency=low

  * Kill hermes while ubiquity runs. 

 -- Alfredo Matas <amatas@emergya.es>  Tue, 26 Aug 2008 10:38:28 +0200

guada-ubiquity (0.9-1guada1) hardy; urgency=low

  * Done a workaround with gtklabel in welcome screen.
